jac-tests/error_logs/types_and_values/test_06_type_references.jac.log
✖ Error: error[E0004]: Unexpected token in expression: 
';'
  --> 
/home/denis/Jaseci/jac-tests/types_and_values/test_06_ty
pe_references.jac:17:32
   15 |         
   16 |         # Missing closing bracket or colon
   17 |         p = [ --> ] [?: Person ; 
      |                                ^
   18 |         print(p);
   19 |     }
✖ Error: error[E0002]: Missing ']'
  --> 
/home/denis/Jaseci/jac-tests/types_and_values/test_06_ty
pe_references.jac:18:9
   16 |         # Missing closing bracket or colon
   17 |         p = [ --> ] [?: Person ; 
   18 |         print(p);
      |         ^^^^^
   19 |     }
   20 | }
✖ Error: error[E0002]: Missing ';'
  --> 
/home/denis/Jaseci/jac-tests/types_and_values/test_06_ty
pe_references.jac:18:9
   16 |         # Missing closing bracket or colon
   17 |         p = [ --> ] [?: Person ; 
   18 |         print(p);
      |         ^^^^^
   19 |     }
   20 | }
